Changes for jdk15 and neo4j 5.x compatability